calendar proto #585: aligned card height for a correct fill-height, while updating a bit the ActivityTitle class

--- a/prototypes/app/assets/proto.css
+++ b/prototypes/app/assets/proto.css
@@ -654,19 +654,24 @@ html.app > body > .container-fluid {
 /* line 5 : d:\Iago\Proxectos\Loconomics.com\styleguide\prototypes\app\styl\components\ActivityTitle.styl */
 .ActivityTitle {
   font-size: 20px;
-  padding: 0.7em 10px 0.4em;
   margin: 0;
   text-align: left;
   font-weight: bold;
+/* Like a row, it use full width
+        but we enforce the internal gap
+    */
+  margin-left: -10px;
+  margin-right: -10px;
+  padding: 0.7em 20px 0.4em 20px;
 /* table layout for better management of the 
         optional elements */
   display: table;
-  width: 100%;
+  width: auto;
 /* The action and the icon must fit mininum space, one line */
 /* Only allowed 'span' elements as childs */
 }
 
-/* line 18 : d:\Iago\Proxectos\Loconomics.com\styleguide\prototypes\app\styl\components\ActivityTitle.styl */
+/* line 24 : d:\Iago\Proxectos\Loconomics.com\styleguide\prototypes\app\styl\components\ActivityTitle.styl */
 .ActivityTitle > .ActivityTitle-action,
 .ActivityTitle > .glyphicon {
 /* fit minimum space */
@@ -674,14 +679,14 @@ html.app > body > .container-fluid {
   white-space: nowrap;
 }
 
-/* line 26 : d:\Iago\Proxectos\Loconomics.com\styleguide\prototypes\app\styl\components\ActivityTitle.styl */
+/* line 32 : d:\Iago\Proxectos\Loconomics.com\styleguide\prototypes\app\styl\components\ActivityTitle.styl */
 .ActivityTitle > span {
   line-height: 1.3em;
   display: table-cell;
   vertical-align: middle;
 }
 
-/* line 32 : d:\Iago\Proxectos\Loconomics.com\styleguide\prototypes\app\styl\components\ActivityTitle.styl */
+/* line 38 : d:\Iago\Proxectos\Loconomics.com\styleguide\prototypes\app\styl\components\ActivityTitle.styl */
 .ActivityTitle > .glyphicon {
   font-size: 1.4em;
   line-height: 1em;
@@ -690,14 +695,14 @@ html.app > body > .container-fluid {
   padding-left: 6px;
 }
 
-/* line 40 : d:\Iago\Proxectos\Loconomics.com\styleguide\prototypes\app\styl\components\ActivityTitle.styl */
+/* line 46 : d:\Iago\Proxectos\Loconomics.com\styleguide\prototypes\app\styl\components\ActivityTitle.styl */
 .ActivityTitle > .ActivityTitle-action > * {
 /* adjusting button/link padding to avoid increase the default line height */
   padding-top: 2px;
   padding-bottom: 2px;
 }
 
-/* line 46 : d:\Iago\Proxectos\Loconomics.com\styleguide\prototypes\app\styl\components\LeadContent.styl */
+/* line 52 : d:\Iago\Proxectos\Loconomics.com\styleguide\prototypes\app\styl\components\LeadContent.styl */
 
 /* line 4 : d:\Iago\Proxectos\Loconomics.com\styleguide\prototypes\app\styl\components\LeadContent.styl */
 .LeadContent {
@@ -1272,21 +1277,37 @@ html.app > body > .container-fluid {
 
 /* line 2 : d:\Iago\Proxectos\Loconomics.com\styleguide\prototypes\app\styl\activities\appointment.styl */
 
-/* line 4 : d:\Iago\Proxectos\Loconomics.com\styleguide\prototypes\app\styl\activities\appointment.styl */
+/* line 7 : d:\Iago\Proxectos\Loconomics.com\styleguide\prototypes\app\styl\activities\appointment.styl */
+[data-activity=appointment] .ActivityTitle {
+  height: 50px;
+  overflow: hidden;
+  position: relative;
+  z-index: 100;
+  background: White;
+}
 
-/* line 6 : d:\Iago\Proxectos\Loconomics.com\styleguide\prototypes\app\styl\activities\appointment.styl */
+/* line 15 : d:\Iago\Proxectos\Loconomics.com\styleguide\prototypes\app\styl\activities\appointment.styl */
+[data-activity=appointment] #calendarAppointmentView {
+  margin-top: -50px;
+/* 4px from CardsDeck padding-top */
+  padding-top: 54px;
+}
+
+/* line 21 : d:\Iago\Proxectos\Loconomics.com\styleguide\prototypes\app\styl\activities\appointment.styl */
+
+/* line 23 : d:\Iago\Proxectos\Loconomics.com\styleguide\prototypes\app\styl\activities\appointment.styl */
 [data-activity=appointment].in-edit .CardsDeck-dots,
 [data-activity=appointment].in-edit .CalendarDateHeader-switch {
   visibility: hidden;
 }
 
-/* line 10 : d:\Iago\Proxectos\Loconomics.com\styleguide\prototypes\app\styl\activities\appointment.styl */
+/* line 27 : d:\Iago\Proxectos\Loconomics.com\styleguide\prototypes\app\styl\activities\appointment.styl */
 [data-activity=appointment].in-edit .ActivityTitle-action {
   pointer-events: none;
   visibility: hidden;
 }
 
-/* line 18 : d:\Iago\Proxectos\Loconomics.com\styleguide\prototypes\app\styl\components\AppointmentCard.styl */
+/* line 35 : d:\Iago\Proxectos\Loconomics.com\styleguide\prototypes\app\styl\components\AppointmentCard.styl */
 
 /* line 5 : d:\Iago\Proxectos\Loconomics.com\styleguide\prototypes\app\styl\components\AppointmentCard.styl */
 
